card initial style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,3 +17,18 @@ header {
     font-size: 20px;
     font-weight: bold;
 }
+
+.card {
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .4);
+    margin: 15px;
+}
+
+.card-divider {
+    justify-content: center;
+    background-color: var(--color2);
+}
+
+.card-section {
+    background-color: var(--color1);
+}
