--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,26 @@
 
 
 :root {
-    --color1: rgb(85, 155, 248);
-    --color2: rgb(248, 150, 85);
-    --color3: rgb(219, 219, 219);
+    --color1: rgb(0, 0, 0);
+    --color2: rgb(144, 0, 0);
+    --color3: rgb(72, 72, 72);
 }
 
 header {
-    background-color: var(--color1);
+    background-color: var(--color2);
     padding-left: 20px;
-    border-bottom: solid 1px;
+    color: var(--color1);
 
 }
 
+label {
+    font-size: 18px;
+}
+
+#instruction {
+    font-weight: bold;
+    font-size: 16px;
+}
 
 h4 {
     background-color: var(--color3);
@@ -40,6 +48,11 @@ button {
     font-weight: bold;
 }
 
+button:hover {
+    background-color: rgb(189, 0, 0);
+    cursor: pointer;
+}
+
 .card {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .4);
@@ -64,8 +77,19 @@ button {
 
 .smallscreen {
     display: none;
+    background-color: var(--color3);
 }
+ .smallbutton {
+    justify-content: center;
+    display: flex;
+    width: 50%;
+    margin: auto;
+ }
 
+ .button2 {
+     padding: 8px;
+     font-size: 25px;
+ }
 
 
 
@@ -81,12 +105,25 @@ button {
 
     .smallscreen {
         display: flex;
+        border-bottom: solid;
     }
 
     .search {
-        border-bottom: solid 2px;
-        padding-bottom: 30px;
         text-align: center;
+        border-right: none;
     }
 
+    .smallbutton {
+        margin-bottom: 20px;
+    }
+
+    h1 {
+        font-size: 30px;
+        font-weight: bold;
+    }
+
+    header {
+        justify-content: center;
+
+    }
 }
