--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,17 @@ button {
     display: none;
 }
 
+.restaurant-row {
+    max-height: 45px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgb(0 0 0 / 40%);
+    margin: 10px;
+    background-color: var(--color2);
+    padding: 10px;
+    color: white;
+    font-size: 18px;
+}
+
 
 
 
