--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,6 +95,10 @@ button:hover {
     display: none;
   }
 
+  .bigscreen {
+    display: none;
+  }
+
   .smallscreen {
     display: flex;
     border-bottom: solid;
