--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ h4 {
   background-color: var(--color3);
   padding: 5px;
   font-weight: bold;
+  
 }
 
 .search {
@@ -50,12 +51,16 @@ button:hover {
   cursor: pointer;
 }
 
+.title {
+  width: 100%;
+}
+
 .card {
   border: 1px solid var(--color1);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   margin: 15px;
-  min-height: 375px;
-  max-height: 375px;
+  /* min-height: 375px;
+  max-height: 375px; */
 }
 
 .card-divider {
@@ -64,7 +69,7 @@ button:hover {
   font-size: 20px;
   font-weight: bold;
   text-align: center;
-  max-height: 75px;
+  /* max-height: 75px; */
 }
 
 .card-section {
@@ -145,5 +150,9 @@ button:hover {
 
   .bigscreen {
     display: none;
+  }
+
+  .card-divider {
+    font-size: 15px;
   }
 }
