--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 
+
 :root {
   --color1: rgb(0, 0, 0);
   --color2: rgb(144, 0, 0);
@@ -9,28 +10,40 @@ header {
   background-color: var(--color2);
   padding-left: 20px;
   color: var(--color1);
+  justify-content: center;
+  border-bottom: solid;
+}
+
+h1 {
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: bold;
 }
 
 label {
   font-size: 18px;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 #instruction {
   font-weight: bold;
   font-size: 16px;
+  font-family: 'Ubuntu', sans-serif;
+  text-align: center;
 }
 
 h4 {
   background-color: var(--color3);
   padding: 5px;
   font-weight: bold;
-  
+  font-family: 'Ubuntu', sans-serif;
+  text-align: center;
 }
 
 .search {
   background-color: var(--color3);
   padding: 10px;
   border-right: solid 1px;
+
 }
 
 .results {
@@ -48,10 +61,11 @@ button {
   border: solid 1px;
   border-radius: 7px;
   font-weight: bold;
+  
 }
 
 button:hover {
-  background-color: rgb(189, 0, 0);
+  background-color: rgb(255, 0, 0);
   cursor: pointer;
 }
 
@@ -120,19 +134,57 @@ button:hover {
   font-size: 25px;
 }
 
+.modalOpen {
+  display: flex;
+  justify-content: center;
+  padding-top: 10px;
+  background-color: var(--color3);
+}
+
+#myBtn {
+  width: 50%;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 @media screen and (max-width: 827px) {
-  #instruction {
-    display: none;
-  }
-
-  .bigscreen {
-    display: none;
-  }
-
-  .smallscreen {
-    display: flex;
-    border-bottom: solid;
-  }
+ 
 
   .search {
     text-align: center;
@@ -152,11 +204,15 @@ button:hover {
     justify-content: center;
   }
 
-  .bigscreen {
-    display: none;
-  }
-
   .card-divider {
     font-size: 15px;
   }
+}
+
+@media screen and (max-width: 500px) {
+
+  #myBtn {
+    font-size: 13px;
+  }
+
 }
