--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,8 +77,11 @@ button:hover {
   border: 1px solid var(--color1);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   margin: 15px;
-  /* min-height: 375px;
-  max-height: 375px; */
+ border-radius:10px;
+}
+
+.card:hover {
+  cursor: pointer;
 }
 
 .card-divider {
@@ -87,7 +90,7 @@ button:hover {
   font-size: 20px;
   font-weight: bold;
   text-align: center;
-  /* max-height: 75px; */
+  
 }
 
 .card-section {
