--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,10 @@ h1 {
   font-weight: bold;
 }
 
+section {
+  padding: 3px;
+}
+
 label {
   font-size: 18px;
   font-family: 'Ubuntu', sans-serif;
@@ -53,6 +57,15 @@ h4 {
 
 label {
   display: none;
+}
+
+.instruction {
+  display: flex;
+  margin: auto;
+}
+
+#instruction {
+  font-size: 20px;
 }
 
 button {
@@ -145,8 +158,9 @@ button:hover {
   background-color: var(--color3);
 }
 
-#myBtn {
+.myBtn {
   width: 50%;
+  margin: auto;
 }
 
 /* The Modal (background) */
@@ -219,4 +233,7 @@ button:hover {
     font-size: 13px;
   }
 
+  #instruction {
+    font-size: 17px;
+  }
 }
