--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,12 +7,13 @@
 }
 
 header {
-  background-color: var(--color2);
   padding-left: 20px;
-  color: var(--color1);
+  color: var(--color2);
   justify-content: center;
-  border-bottom: solid;
+  border-bottom: solid black;
 }
+
+
 
 h1 {
   font-family: 'Ubuntu', sans-serif;
@@ -33,6 +34,7 @@ label {
   font-size: 16px;
   font-family: 'Ubuntu', sans-serif;
   text-align: center;
+ 
 }
 
 h4 {
@@ -74,7 +76,7 @@ button {
   border: solid 1px;
   border-radius: 7px;
   font-weight: bold;
-  
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 button:hover {
@@ -90,8 +92,7 @@ button:hover {
   border: 1px solid var(--color1);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   margin: 15px;
-  /* min-height: 375px;
-  max-height: 375px; */
+
 }
 
 .card-divider {
@@ -100,7 +101,6 @@ button:hover {
   font-size: 20px;
   font-weight: bold;
   text-align: center;
-  /* max-height: 75px; */
 }
 
 .card-section {
@@ -199,6 +199,13 @@ button:hover {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+.stars {
+  background-color: var(--color1);
+
+  background-image:url("https://64.media.tumblr.com/tumblr_lzvjakQDzV1qhvdofo4_250.png");
+
 }
 
 @media screen and (max-width: 827px) {
