--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-
-
 :root {
   --color1: rgb(0, 0, 0);
   --color2: rgb(144, 0, 0);
@@ -133,6 +131,16 @@ button:hover {
   background-color: var(--color3);
 }
 
+.restaurant-row:hover {
+  color: #fff;
+  text-decoration: underline;
+}
+
+.restaurant-row:active, .restaurant-row:focus, .restaurant-row:visited {
+  color: #fff;
+  text-decoration: none;
+}
+
 .button2 {
   padding: 8px;
   font-size: 25px;
@@ -170,6 +178,14 @@ button:hover {
   padding: 20px;
   border: 1px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
+}
+
+.error-modal {
+  left: 25%;
+  top: 20%;
+  width: 50%;
+  height: 100px;
+  z-index: 2;
 }
 
 /* The Close Button */
