added checking for missing info on streaming result cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,6 +120,10 @@ button:hover {
   border: 1px solid var(--color1);
 }
 
+.item-img {
+  height: 111.2px;
+}
+
 .item-info {
   font-size: 13px;
   font-weight: bold;
