--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,6 +212,22 @@ button:hover {
   width: 50%;
   height: 100px;
   z-index: 2;
+  background-color: #c5c2c2;
+  border: 3px solid #000;
+}
+
+.error-text {
+  color: #000;
+  padding: 5px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.error-modal-btn {
+  width: 25%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 /* The Close Button */
